# program-celeste

./: CMakeLists.txt
src/: main.cpp
src/Common/: Constant.h  Renderable.h
src/Core/: Game.cpp  Game.h
src/Input/: Input.cpp  Input.h
src/Level/: Level.cpp  Level.h
src/Physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/Player/: AnimationComponent.cpp  AnimationComponent.h  Player.cpp  Player.h  StateMachine.cpp  StateMachine.h
src/Render/: Line.cpp  Line.h  Particle.cpp  Particle.h  Render.cpp  Renderable.h  TrailEffect.cpp  TrailEffect.h  ViewRender.cpp  ViewRender.h
